src/app/globals.css
@import "tailwindcss";

* {
  cursor: none !important;
}

@theme {
  --color-primary: var(--theme-primary);
  --color-secondary: var(--theme-secondary);
  --color-accent: var(--theme-accent);
  --color-background: var(--theme-background);
  --color-text: var(--theme-text);
  --color-border: var(--theme-border);
  --color-card: var(--theme-card);
  --color-hover: var(--theme-hover);
}

@layer base {
  :root {
    --theme-primary: #3b82f6;
    --theme-secondary: #1e40af;
    --theme-accent: #f59e0b;
    --theme-background: #e5e7eb;
    --theme-text: #1e293b;
    --theme-border: #e4e4e7;
    --theme-card: #ffffff;
    --theme-hover: #f4f4f5;
  }

  .dark {
    --theme-primary: #1e293b;
    --theme-secondary: #334155;
    --theme-accent: #f59e0b;
    --theme-background: #0f172a;
    --theme-text: #f1f5f9;
    --theme-border: #09090b;
    --theme-card: #18181b;
    --theme-hover: #27272a;
  }
}

@utility border-slash {
  border-style: solid;
  border-image: repeating-linear-gradient(135deg,
      currentColor 0px,
      currentColor 3px,
      transparent 3px,
      transparent 12px) 10 stretch;
}

::-webkit-scrollbar {
  width: 8px;
}

::-webkit-scrollbar-thumb {
  border-radius: 8px;
  background-color: var(--theme-primary);
}

.at-top::-webkit-scrollbar-thumb {
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.at-bottom::-webkit-scrollbar-thumb {
  border-bottom-left-radius: 0px;
  border-bottom-right-radius: 0px;
}

